# capibara

./: .readthedocs.yaml  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  sync_docs.py
_docs/: development.rst  mcp.rst  semio.rst
_docs/_build/doctrees/: api_reference.doctree  architecture.doctree  changelog.doctree  contributing.doctree
_docs/_build/html/: architecture.html  changelog.html  contributing.html  development.html  genindex.html  getting_started.html  search.html  semio.html  user_guide.html
capibara_model/: __init__.py
docs/: Makefile  api.rst  api_reference.rst  architecture.rst  changelog.rst  code_of_conduct.rst  conf.py  configuration.rst  contributing.rst  development.rst  examples.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  jax_native_implementation.rst  papers.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: api_reference.doctree  architecture.doctree  changelog.doctree  code_of_conduct.doctree  contributing.doctree  development.doctree  examples.doctree  getting_started.doctree  index.doctree  installation.doctree  mcp.doctree  quickstart.doctree  semio.doctree  troubleshooting.doctree  user_guide.doctree
docs/_build/html/: .buildinfo  README.html  api_reference.html  architecture.html  changelog.html  changelog_v3.html  code_of_conduct.html  configuration.html  contributing.html  development.html  documentation_summary.html  examples.html  genindex.html  getting_started.html  index.html  installation.html  jax_native_implementation.html  mcp.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  semio.html  tpu_v4_optimizations.html  troubleshooting.html  (+2 more)
docs/docs/: .buildinfo  objects.inv  searchindex.js
docs/layers/: index.rst
docs/meta_loop/: index.rst
docs/modules/: layers.rst  quantum.rst  quantum_encoders.rst  semiotic.rst  submodels.rst  tpu.rst
docs/papers/: capibara_paper.md  capibara_paper.tex
docs/sub_models/: index.rst
(+42 files in other folders)
