[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capibara"
version = "0.1.0"
description = "Modelo de lenguaje basado en State Space Models (SSM) optimizado para TPU y GPU"
authors = [
    {name = "Anachroni s.coop"}
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[tool.setuptools]
package-dir = {"" = "capibara"}
packages = ["capibara"]