[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capibara_model"
version = "2.0.0"
description = "Modelo de lenguaje avanzado basado en arquitecturas Transformer y Capibara SSM"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Marco Durán", email = "marco@anachroni.co"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "jax>=0.4.28",
    "flax>=0.8.1",
    "optax>=0.1.9",
    "tensorflow>=2.15.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "myst-parser>=2.0.0",
]
quantum = [
    "qiskit>=0.45.0",
    "cirq>=1.3.0",
    "pennylane>=0.32.0",
]

[project.urls]
Homepage = "https://github.com/Anachroni-co/CapibaraGPT-v2"
Documentation = "https://capibaragpt-v2.readthedocs.io/"
Repository = "https://github.com/Anachroni-co/CapibaraGPT-v2.git"

[tool.setuptools]
packages = ["capibara_model"]
zip-safe = false
include-package-data = true